  (Merged from trunk Rev. 129)
* Fixed #015649: Class 'None' sometimes saved when changing tag type in popup dialog
  (Merged from trunk Rev. 131)
* Fixed #15659: Empty paragraph created below inserted image
  (Merged from trunk Rev. 137)
* Fixed #15663: "Apply to: column" target cells are shifted when rowspan is used
  (Merged from trunk Rev. 148, 149 & 150)


5.0.4
* Fixed #15031: Unable to browse 'Images' folder on IE6 and IE7
  (Merged from trunk Rev. 87)
* Fixed #14833: Cut/Copying and pasting custom-tags fails
  (Merged from trunk Rev. 91)
* Documented: #15187: Keyboard shortcuts for functions in editor toolbar
  (Merged from trunk Rev. 93)
* Implemented: possibility to opt out of __setDisabled in custom TinyMCE plugins using settings.ezPlugin, patch by stevo
  (Merged from trunk Rev. 95)
* Added por-BR translation
  (Merged from trunk Rev. 99)
* Fixed #13691: Uneeded space on ezoe with IE7
  (Merged from trunk Rev. 101)
* Fixed #15501: view attribute on links are removed on copy/paste
  (Merged from trunk Rev. 107)
* Updated TinyMCE to 3.2.7
  (Merged from trunk Rev. 115)

5.0.3
* Fixed #14935: Small typo at design.ini.append.php
  (Merged from trunk Rev. 29)
* Fixed #15014: image identifier is hardcoded in upload_images.tpl
  (Merged from trunk Rev. 33)
* Implemented #14869: Different icons for ezoe buttons: 'Publish' and 'Draft'
  New store icon contributed by Russ Michell
  (Merged from trunk Rev. 35)
* Fixed #15053: Parse error in tag_custom.tpl
  (Merged from trunk Rev. 37)
* Fixed #15052: An object cannot be browsed when creating a link
  (Merged from trunk Rev. 39)
* Implemented #15139: Add support for tagging images during upload
  (Merged from trunk Rev. 44)
* Fixed: "Warning: Missing argument 1 for eZImageAliasHandler::store()" when inserting alternative text on images
  (Merged from trunk Rev. 46)
* Fixed: WebKit (Safari 4 & Chrome 2+) width problem on height resize
  (Merged from trunk Rev. 48)
* Documented: #15151: Table insert row before ...