@@ -9,6 +9,8 @@ eZ Online Editor 5.0 extension Changelog
   (Merged from trunk Rev. 137)
 * Fixed #15663: "Apply to: column" target cells are shifted when rowspan is used
   (Merged from trunk Rev. 148, 149 & 150)
+* Fixed #15882: Embed size when not set in ezxml hardcoded to medium, should use DefaultEmbedAlias
+  (Merged from trunk Rev. 162)
 
 
 5.0.4
